--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -1,3 +1,14 @@
+$black: #1e1e1e;
+$blue: #94a5d4;
+$green: #a9c9aa;
+$pink-1: #ba808b;
+$pink-2: #c78c96;
+$pink-3: #d498a3;
+$pink-4: #e3aab5;
+$pink-5: #f2b9c4;
+$red: #ff4775;
+$yellow: #ffc640;
+
 @mixin flex-center {
   display: flex;
   flex-direction: column;
@@ -7,11 +18,13 @@
 
 .main {
   @include flex-center;
+  justify-content: flex-start;
   gap: 2rem;
   padding: 4rem;
   max-width: 100vw;
   height: 100vh;
-  overflow: scroll;
+  overflow-x: hidden;
+  overflow-y: scroll;
   user-select: none;
   h1,
   p {
@@ -23,6 +36,7 @@
   }
   section {
     @include flex-center;
+    flex-direction: row;
     gap: 1rem;
     img {
       border-radius: 15px;
