--- a/app/globals.scss
+++ b/app/globals.scss
@@ -14,8 +14,18 @@ body {
 
 body {
   height: 100vh;
-  background: #a6d6d8;
-  color: black;
+  background: #d498a3;
+  color: #1e1e1e;
+  font-family: 'Pacifico', cursive;
+  font-family: 'Sawarabi Mincho', serif;
+}
+
+.pacifico {
+  font-family: 'Pacifico', cursive;
+}
+
+.sawarabi-mincho {
+  font-family: 'Sawarabi Mincho', serif;
 }
 
 a {
