--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -20,7 +20,7 @@ $yellow: #ffc640;
   @include flex-center;
   justify-content: flex-start;
   gap: 2rem;
-  padding: 4rem;
+  padding: 6rem 4rem;
   max-width: 100vw;
   height: 100vh;
   overflow-x: hidden;
