--- a/app/_styles/Board.module.scss
+++ b/app/_styles/Board.module.scss
@@ -46,12 +46,14 @@
   @include transition(background-color, transform);
 
   &.selected {
-    background-color: $yellow;
+    background-color: $green;
+    border: 2px solid $yellow;
     background-size: 100%;
   }
 
   &.match {
-    background-color: $red;
+    background-color: $pink-5;
+    border: 2px solid $red;
   }
 
   &.disappear {
@@ -73,7 +75,6 @@
   animation: fade-out $transition-duration forwards;
 }
 
-// Animations
 @keyframes disappear {
   to {
     opacity: 0;
