--- a/app/_styles/Board.module.scss
+++ b/app/_styles/Board.module.scss
@@ -10,7 +10,7 @@
   margin-top: 2rem;
   height: 4rem;
   width: 16rem;
-  font-size: 2rem;
+  font-size: 1rem;
 }
 
 .score {
@@ -37,27 +37,20 @@
   border: 1px solid $pink-5;
   font-size: 20px;
   cursor: pointer;
-  background-size: 90%;
-  background-repeat: no-repeat;
-  background-position: center;
   background-color: $white;
-  @include transition(background-color, transform);
-
+  @include transition(all);
   &.selected {
     background-color: $green;
     border: 2px solid $yellow;
     background-size: 100%;
   }
-
   &.match {
     background-color: $pink-5;
     border: 2px solid $red;
   }
-
   &.disappear {
     animation: disappear $transition-duration forwards;
   }
-
   &.swap {
     z-index: 1;
   }
