--- a/app/_styles/Instructions.module.scss
+++ b/app/_styles/Instructions.module.scss
@@ -31,10 +31,15 @@
     text-align: center;
     @include flex-center;
     flex-direction: column;
-    line-height: 120%;
+    line-height: 125%;
   }
-  ul > li {
-    margin-top: 1rem;
+  li {
+    margin-top: 0.5rem;
+    strong {
+      margin-top: 0.5rem;
+      margin-bottom: 0.5rem;
+      font-size: 125%;
+    }
   }
   h2 {
     margin-top: 1rem;
