another accidental scroll fix

--- a/app/_styles/Board.module.scss
+++ b/app/_styles/Board.module.scss
@@ -28,6 +28,7 @@
   grid-template-columns: repeat(10, $cell-size);
   grid-template-rows: repeat(10, $cell-size);
   position: relative;
+  touch-action: none;
 }
 
 .row {
