--- a/app/_styles/Instructions.module.scss
+++ b/app/_styles/Instructions.module.scss
@@ -57,6 +57,11 @@
     margin-bottom: 1rem;
     text-align: center;
   }
+  label {
+    @include flex-center;
+    margin-top: 1rem;
+    gap: 1rem;
+  }
 }
 
 .button {
