fix to localstorage for hide instructions

--- a/app/_styles/Board.module.scss
+++ b/app/_styles/Board.module.scss
@@ -29,6 +29,7 @@
   grid-template-rows: repeat(10, $cell-size);
   position: relative;
   touch-action: none;
+  background-color: $white;
 }
 
 .row {
