--- a/app/_styles/Board.module.scss
+++ b/app/_styles/Board.module.scss
@@ -90,6 +90,57 @@
   animation: fade-out $transition-duration forwards;
 }
 
+.soundSwitch {
+  @include flex-center;
+  gap: 4rem;
+  margin: 2rem 0;
+}
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+  margin-left: 36px;
+  input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    transition: 0.4s;
+    border-radius: 34px;
+    &:before {
+      position: absolute;
+      content: '';
+      height: 26px;
+      width: 26px;
+      left: 4px;
+      bottom: 4px;
+      background-color: white;
+      transition: 0.4s;
+      border-radius: 50%;
+    }
+  }
+  img {
+    position: absolute;
+    left: -40px;
+  }
+  input:checked + .slider {
+    background-color: #2196f3;
+  }
+  input:checked + .slider:before {
+    transform: translateX(26px);
+  }
+}
+
 @keyframes disappear {
   to {
     opacity: 0;
