--- a/app/_styles/Board.module.scss
+++ b/app/_styles/Board.module.scss
@@ -117,6 +117,13 @@
     background-color: #ccc;
     transition: 0.4s;
     border-radius: 34px;
+    box-shadow: $black 2px 2px 0 0;
+    &:hover {
+      box-shadow: $black 4px 4px 0 0;
+      &:before {
+        box-shadow: $black 2px 2px 0 0;
+      }
+    }
     &:before {
       position: absolute;
       content: '';
@@ -127,6 +134,7 @@
       background-color: white;
       transition: 0.4s;
       border-radius: 50%;
+      box-shadow: $black 1px 1px 0 0;
     }
   }
   img {
