--- a/app/_styles/LevelSelector.module.scss
+++ b/app/_styles/LevelSelector.module.scss
@@ -14,7 +14,7 @@
 .levelGrid {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: center;
   gap: 1rem;
 }
 
