level 1 with goals and game over

--- a/app/_styles/Board.module.scss
+++ b/app/_styles/Board.module.scss
@@ -78,6 +78,46 @@
   }
 }
 
+.won {
+  margin-top: 3rem;
+  margin-bottom: 2rem;
+  text-align: center;
+  color: transparent;
+  transition: color;
+  animation: text-glow 2s ease-in-out infinite;
+}
+
+.win {
+  &:before,
+  &:after {
+    content: '';
+    position: absolute;
+    left: -2px;
+    top: -2px;
+    background: linear-gradient(
+      45deg,
+      $green,
+      $blue,
+      $green,
+      $yellow,
+      $red,
+      $green,
+      $blue,
+      $green,
+      $yellow,
+      $red
+    );
+    background-size: 200%;
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    z-index: -1;
+    animation: glow 5s ease-in-out infinite;
+  }
+  &:after {
+    filter: blur(10px);
+  }
+}
+
 .matchIndicator {
   position: absolute;
   font-size: 16px;
@@ -175,6 +215,41 @@
     transform: scale(1);
     opacity: 0.8;
     box-shadow: 0 0 0.5rem $red, 0 0 1rem $yellow, 0 0 0.5rem $blue;
+  }
+}
+
+@keyframes text-glow {
+  0% {
+    background: linear-gradient(0deg, $red, $black);
+    -webkit-background-clip: text;
+  }
+  25% {
+    background: linear-gradient(45deg, $black, $red);
+    -webkit-background-clip: text;
+  }
+  50% {
+    background: linear-gradient(90deg, $red, $black);
+    -webkit-background-clip: text;
+  }
+  75% {
+    background: linear-gradient(135deg, $black, $red);
+    -webkit-background-clip: text;
+  }
+  100% {
+    background: linear-gradient(180deg, $red, $black);
+    -webkit-background-clip: text;
+  }
+}
+
+@keyframes glow {
+  0% {
+    background-position: 0 0;
+  }
+  50% {
+    background-position: 200% 0;
+  }
+  100% {
+    background-position: 0 0;
   }
 }
 
