--- a/app/_styles/LevelSelector.module.scss
+++ b/app/_styles/LevelSelector.module.scss
@@ -4,6 +4,7 @@
   padding: 20px;
   background-color: $pink-5;
   max-width: 90vw;
+  padding-bottom: 4rem;
   h2 {
     text-align: center;
     margin-top: 1rem;
