--- a/app/_styles/Levels.module.scss
+++ b/app/_styles/Levels.module.scss
@@ -6,8 +6,7 @@
   flex-direction: column;
   padding: 2rem;
   gap: 2rem;
-  height: 100vh;
-  overflow: scroll;
+  @include layout;
 }
 
 .button {
