--- a/app/_styles/LevelSelector.module.scss
+++ b/app/_styles/LevelSelector.module.scss
@@ -3,8 +3,8 @@
 .modal {
   padding: 20px;
   background-color: $pink-5;
-  max-width: 90vw;
   padding-bottom: 4rem;
+  max-width: 600px;
   h2 {
     text-align: center;
     margin-top: 1rem;
